--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
-  "name": "𝗬𝗢𝗨𝗥 𝗖𝗥𝗨𝗦𝗛 ⟵𝗼_𝟬",
-  "version": "1.0.0",
-  "description": "Advanced Facebook Messenger Bot with role-based access, fun system, and secure owner control.",
+  "name": "messenger-bot-master",
+  "version": "2.0.0",
+  "description": "Ultra Professional Messenger Bot with appstate.json support",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node start.js",
+    "login": "node login.js",
+    "setup": "node setup.js",
     "dev": "nodemon src/index.js",
-    "setup": "node src/secure/setupOwner.js"
+    "test": "node test.js",
+    "backup": "node backup.js"
   },
   "dependencies": {
-    "facebook-chat-api": "github:Schmavery/facebook-chat-api",
+    "facebook-chat-api": "github:ntkhang03/fb-chat-api",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "fs-extra": "^11.2.0",
-    "crypto": "^1.0.1",
-    "axios": "^1.6.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "chalk": "^4.1.2",
+    "cloudinary": "^1.41.1",
+    "firebase-admin": "^11.11.1",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "node-cron": "^3.0.3",
+    "form-data": "^4.0.0",
+    "request": "^2.88.2",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "messenger-bot",
+    "facebook-bot",
+    "appstate",
+    "automation",
+    "your-crush-bot"
+  ],
+  "author": "RANA (MASTER 🪓) <ranaeditz333@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/messenger-bot.git"
   }
 }
