--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,36 @@
-name: Deploy Bot
+name: Node.js CI
 
-on: workflow_dispatch
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node 18
-      uses: actions/setup-node@v4
+    # Step to check out the repository code
+    - uses: actions/checkout@v2
+
+    # Step to set up the specified Node.js version
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
       with:
-        node-version: '18'
-        
-    - name: Install deps
+        node-version: ${{ matrix.node-version }}
+
+    # Step to install dependencies
+    - name: Install dependencies
       run: npm install
-      
-    - name: Run bot
-      run: |
-        if [ -f "src/secure/appstate.json" ]; then
-          echo "Starting bot with appstate..."
-          timeout 600 npm start
-        else
-          echo "No appstate, testing only..."
-          node -c src/index.js && echo "✅ Syntax OK"
-        fi
+
+    # Step to run the bot with the correct port
+    - name: Start the bot
+      env:
+        PORT: 8080
+      run: npm start
