Update start and dev scripts to use src/index.js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Messenger bot v2",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "fb-chat-api": "https://github.com/ntkhang03/fb-chat-api.git",
