--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ultra-bot-v2",
   "version": "1.0.0",
-  "description": "Messenger bot v2",
-  "main": "index.js",
+  "description": "Ultra Messenger Bot v2",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "fs-extra": "^11.1.1",
     "fb-chat-api": "https://github.com/ntkhang03/fb-chat-api.git",
     "axios": "^1.7.2",
     "express": "^4.18.2",
