--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
-    "fb-chat-api": "https://github.com/ntkhang03/fb-chat-api.git",
+    "dependencies": {
+   "facebook-chat-api": "https://github.com/ntkhang03/fb-chat-api.git",
+  "fs-extra": "^11.1.1",
+  "axios": "^1.7.2",
+  "express": "^4.18.2",
+  "body-parser": "^1.20.2",
+  "dotenv": "^16.3.1"
+}
     "axios": "^1.7.2",
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
