--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,35 @@ name: Run Ultra Bot V2
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Setup Node.js
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 18
 
-      # Step 3: Install dependencies (flexible, avoids npm ci issues)
+      - name: Clean old files
+        run: |
+          rm -f package-lock.json
+          rm -rf node_modules
+
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Run the bot
-      - name: Start Bot
+      - name: Verify files
+        run: |
+          ls -la
+          ls -la src
+
+      - name: Run bot
         run: node src/index.js
